# Clue-Symptom-Tracker-v0

./: .editorconfig  .env.development  .env.staging  .gitignore  2025_custom_2025-12-26_2026-01-08 (1).csv  2025_custom_2025-12-26_2026-01-08.csv  CLAUDE.md  Experiences of Spoonies with Symptom Tracking Apps.docx  First one.csv  Landing Page Conversion Research.md  README.md  eslint.config.mjs  lint-staged.config.js  list_models.py  n8n.json  package.json  pnpm-lock.yaml  powersync-llm-index.md  spoon_saver_v3_onboarding_analysis.md  tailwind.config.js  test_key.py  test_key_2.py  third.csv  tsconfig.json
marketing-studio/: .gitignore  CLAUDE.md  env.example  langgraph.json  pyproject.toml  requirements.txt  run.sh
marketing-studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
marketing-studio/ad-data/Campaign 1: ChronicLife_Validation_Experiment_v1/: README.MD
marketing-studio/agent/: __init__.py  graph.py  nodes.py  state.py
marketing-studio/assets/: .gitkeep  README.md
marketing-studio/knowledge/brand/: guidelines.md  value-props.md
marketing-studio/knowledge/campaigns/: endo_pain_v1.md  index.md
marketing-studio/knowledge/competitors/: index.md
marketing-studio/knowledge/context/: current-priorities.md
marketing-studio/knowledge/prompts/: library.md
marketing-studio/knowledge/research/: index.md  pain-points.md
marketing-studio/rag/: __init__.py  embeddings.py  indexer.py  retriever.py
marketing-studio/tools/: __init__.py  campaign.py  copy.py  image.py
(+324 files in other folders)
